# Axia-Network-axia-wasm

./: Cargo.toml  LICENSE-MIT  README.md
examples/: bench-decoder.rs  build.rs  data.rs  exports.rs  info.rs  inject.rs  roundtrip.rs  show.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: deserialize.rs
res/cases/v1/: with_names.wasm
spec/: Cargo.toml
spec/src/: lib.rs  run.rs
src/builder/: module.rs
src/elements/: mod.rs
