[package]
name = "axia-wasm-testsuite"
version = "0.0.0"
authors = ["NikVolf <nikvolf@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/nikvolf/axia-wasm"
homepage = "https://github.com/nikvolf/axia-wasm"
description = "axia-wasm testsuite"

[dependencies]
wabt = "0.7.1"
axia-wasm = { path = ".." }
